<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".InputTelnoActivity">

    <TextView
        android:id="@+id/telonoheader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:text="@string/Telnoheader"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="22sp" />

    <LinearLayout
        android:id="@+id/name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/telonoheader"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nameandlastname"
            android:textAlignment="textStart"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/txtname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="textEnd"
            android:textColor="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/citizenID_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_layout"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/citizenID"
            android:textAlignment="textStart"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/txtcitizenID"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="textEnd"
            android:textColor="@color/black" />

    </LinearLayout>

    <TextView
        android:id="@+id/edtidhint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/citizenID_layout"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/telno"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtidhint"
        android:layout_marginStart="20dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/border"
        android:padding="10dp">

        <EditText
            android:id="@+id/telono_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/telnohint"
            android:imeOptions="actionDone"
            android:inputType="numberDecimal"
            android:maxLength="10"
            android:singleLine="true"
            android:textCursorDrawable="@null" />

        <Button
            android:id="@+id/clear_telono_btn"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="right|center_vertical"
            android:layout_marginEnd="10dp"
            android:background="@drawable/icons8_delete_26px"
            android:visibility="invisible" />

    </FrameLayout>

    <Button
        android:id="@+id/next_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:background="@drawable/nextbtn"
        android:drawableEnd="@drawable/icons8_right_32px_1"
        android:gravity="center"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textStyle="bold" />


</RelativeLayout>