<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/headerlayout"
        android:background="@drawable/whiteheader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="18sp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="5dp"
            android:layout_centerHorizontal="true"
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="RelativeOverlap" />
        <Button
            android:id="@+id/settingbtn"
            android:background="@drawable/ic_setting2_black"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_width="36dp"
            android:layout_height="36dp"/>

        <LinearLayout
            android:layout_below="@id/settingbtn"
            android:id="@+id/header_text_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="40dp"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/textcategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:text="@string/Category"
                android:textAlignment="textStart"
                android:textColor="@android:color/black"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/txtqueuewait"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/queuewait"
                android:textAlignment="textEnd"
                android:textColor="@android:color/black"
                android:textSize="28sp" />
        </LinearLayout>
    </RelativeLayout>



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/headerlayout">

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


        </LinearLayout>
    </ScrollView>

</RelativeLayout>