<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings.SettingsActivity">

    <RelativeLayout
        android:id="@+id/headerlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/whiteheader"
        android:paddingBottom="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="@string/setting"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/skip_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/headerlayout"
        android:layout_marginTop="20dp"
        android:background="@drawable/doubleline">

        <LinearLayout
            android:id="@+id/switchernamelayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/underline"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="5dp">

            <TextView
                android:gravity="start|center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/enablescanner"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

            <com.github.angads25.toggle.widget.LabeledSwitch
                android:id="@+id/switchername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                app:colorBorder="@color/green_active"
                app:colorOn="@color/green_active"
                app:on="false"
                app:textOff="ปิด"
                app:textOn="เปิด" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/switcherphonelayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/switchernamelayout"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:gravity="start|center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/enablephone"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

            <com.github.angads25.toggle.widget.LabeledSwitch
                android:id="@+id/switcherphone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                app:colorBorder="@color/green_active"
                app:colorOn="@color/green_active"
                app:on="false"
                app:textOff="ปิด"
                app:textOn="เปิด" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/catesetting_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/skip_layout"
        android:layout_marginTop="10dp"
        android:background="@drawable/doubleline">


        <TextView
            android:gravity="start|center"
            android:layout_centerVertical="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/Category"
            android:drawableEnd="@drawable/icons8_more_than_24px"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

    </RelativeLayout>

</RelativeLayout>